--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
     <string name="app_name">LoLScouter</string>
     <string name="question_count">/13</string>
-    <string name="kakao_api_key"></string>
-    <string name="kakao_scheme"></string>
+    <string name="kakao_api_key">d5ea3eaae957c8b510b65de7bb5832f2</string>
+    <string name="kakao_scheme">kakaod5ea3eaae957c8b510b65de7bb5832f2</string>
     <string name="kakaolink_host">kakaolink</string>
     <string name="reword_ad_unit_id"></string>
     <string name="add_mop_id"></string>
-    <string name="google_play_app_id"></string>
+    <string name="app_id">91311773031</string>
 
     <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
     <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
